--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,15 +14,23 @@ jobs:
   # This workflow contains a single job called "deploy-infrastructure"
   deploy-infrastructure:
     runs-on: ubuntu-latest
-
+    env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_REGION: eu-central-1
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform state bucket
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          cd infrastructure
+          sh setup_terraform_state_bucket.sh
+      # Runs a set of commands using the runners shell
+      - name: Deploy with Terraform
+        run: |
+          cd infrastructure
+          terraform init
+          terraform apply -auto-approve
